Initial PDF combine support

--- a/PDFCombiner/frmMain.resx
+++ b/PDFCombiner/frmMain.resx
@@ -127,31 +127,31 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACY
-        BQAAAk1TRnQBSQFMAwEBAAEIAQABCAEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACW
+        BQAAAk1TRnQBSQFMAwEBAAEwAQABMAEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
         ARADAAEBAQABIAYAARAWAAMCAQMDDgETAxABFQMQARUDEAEVAxABFQMQARUDEAEVAxABFQMQARUDEAEV
-        AxABFQMPARQDCQEMyAADBwEJASwBFgGTAf8BLAEXAZcB/wEsARgBmgH/ASwBGQGdAf8BKwEZAZ4B/wF6
-        AXMBoQH/AdABzwHZAf8BfgF0AboB/wPLAf8DygH/A94B/wPeAf8BmgGTAa4B7MwAASwBGwGkAf8BLAEc
-        AagB/wEsAR0BrAH/ASwBHgGuAf8BJwEdAYcB/wPgAf8BLQEfAbIB/wF7AXMBwwH/A+AB/wPJAf8D2wH/
-        A+AB/wFBAS8BogH/zAABLQEgAbQB/wEtASEBuQH/ASwBIgG8Af8BIgEbAZIB/wPjAf8BRQE+AcgB/wEt
-        ASQBxAH/AXgBcwHMAf8D4wH/A9oB/wPMAf8D4wH/ATIBIgGqAf/MAAEsASQBwgH/ASsBJAG5Af8BNQEy
-        AY8B/wPlAf8BSgFGAc0B/wEyAS0BygH/ATIBLQHKAf8BdwF0AdAB/wPlAf8D5QH/A9EB/wGlAaMByAH/
-        ATIBJgG4Af/MAAE7ATkBjwH/AskB1wH/A+gB/wE6ATgBzgH/ATYBNQHOAf8BNwE2Ac8B/wE3ATYBzwH/
-        AXYBdQHTAf8D6AH/A+gB/wPoAf8BVgFTAbwB/wExASoBsQH/zAAD6wH/Aq8B4gH/AjoB0QH/ATsBPAHS
-        Af8BOwE9AdEB/wE8AT4B0gH/AT0BPwHTAf8BbQFvAdkB/wPrAf8D6wH/A+sB/wE3ATYBzwH/ATQBMAG1
-        Af/MAAEvATABqAH/ATUBNwG4Af8BOAE8Ab8B/wE5AT4BwQH/AToBQAHCAf8BOwFAAcIB/wE7AUEBwgH/
-        AVkBXQHDAf8D1QH/A9UB/wPbAf8BOwE9AdEB/wE7AToByAH/zAAD1wH/AYEBggGnAf8BKwEwAY4B/wE7
-        AUIBvAH/AT8BSAHGAf8BQAFJAcYB/wFAAUkBxgH/AVABWAHEAf8D2AH/A9gB/wPYAf8BOQE+AcEB/wE6
-        ATsBvwH/zAABnAGeAdEB/wPaAf8D2gH/AaIBpAG7Af8BOAFCAagB/wFEAVEBygH/AUUBUQHLAf8BRgFR
-        AcsB/wPaAf8D2gH/AtUB1wH/AT0BRAHEAf8BPAFAAcIB/8wAAUYBUAHcAf8BSQFVAd8B/wFcAWgB4wH/
-        AvAB8wH/A+YB/wE+AUgBlAH/AU0BXAHMAf8BTQFcAc8B/wPcAf8D3AH/A9wB/wFBAUoBxwH/AT4BRQHG
-        Af/MAAFJAVQB3wH/AU0BWgHiAf8BUwFjAeUB/wFaAWsB6AH/AZoBpgHwAf8D+AH/AWgBcgGsAf8BVgFo
-        AdEB/wPfAf8D3wH/A98B/wFDAU4ByQH/AUABSAHJAf/MAAFLAVcB4AH/AVEBYAHkAf8BWQFqAegB/wFh
-        AXUB6wH/AWgBgAHuAf8BcAGJAfEB/wP6Af8BjQGVAb4B/wP6Af8D5gH/A+EB/wFFAVIBywH/AUABSwHM
-        Af/MAAFfAWoB4gH+AWUBcgHoAf8BbAF9AesB/wF0AYgB7gH/AXwBkwHyAf8BhQGdAfUB/wGIAaEB9wH/
-        AfIB9AH8Af8C9wH6Af8D/QH/A/wB/wFaAWUB0gH/AU0BUwGPAaz/AP8AxgABQgFNAT4HAAE+AwABKAMA
-        AUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAYABAQYAAYABAQYAAcABAQYAAcABAQYAAcABAQYAAcABAQYA
-        AcABAQYAAcABAQYAAcABAQYAAcABAQYAAcABAQYAAcABAQYAAcABAQYAAcABAQYAAv8GAAL/BgAL
+        AxABFQMPARQDCQEMyAADBwEJAScBEQGTAf8BJwESAZcB/wEnARMBmgH/AScBFAGdAf8BJgEUAZ4B/wF1
+        AW4BoQH/AdABzwHZAf8BeQFvAboB/wPLAf8DygH/A94B/wPeAf8BfQF6AYcB7MwAAScBFgGkAf8BJwEX
+        AagB/wEnARgBrAH/AScBGQGuAf8BIgEYAYcB/wPgAf8BKAEaAbIB/wF2AW4BwwH/A+AB/wPJAf8D2wH/
+        A+AB/wE8ASoBogH/zAABKAEbAbQB/wEoARwBuQH/AScBHQG8Af8BHQEWAZIB/wPjAf8BQAE5AcgB/wEo
+        AR8BxAH/AXMBbgHMAf8D4wH/A9oB/wPMAf8D4wH/AS0BHQGqAf/MAAEnAR8BwgH/ASYBHwG5Af8BMAEt
+        AY8B/wPlAf8BRQFBAc0B/wEtASgBygH/AS0BKAHKAf8BcgFvAdAB/wPlAf8D5QH/A9EB/wGlAaMByAH/
+        AS0BIQG4Af/MAAE2ATQBjwH/AskB1wH/A+gB/wE1ATMBzgH/ATEBMAHOAf8BMgExAc8B/wEyATEBzwH/
+        AXEBcAHTAf8D6AH/A+gB/wPoAf8BUQFOAbwB/wEsASUBsQH/zAAD6wH/Aq8B4gH/AjUB0QH/ATYBNwHS
+        Af8BNgE4AdEB/wE3ATkB0gH/ATgBOgHTAf8BaAFqAdkB/wPrAf8D6wH/A+sB/wEyATEBzwH/AS8BKwG1
+        Af/MAAEqASsBqAH/ATABMgG4Af8BMwE3Ab8B/wE0ATkBwQH/ATUBOwHCAf8BNgE7AcIB/wE2ATwBwgH/
+        AVQBWAHDAf8D1QH/A9UB/wPbAf8BNgE4AdEB/wE2ATUByAH/zAAD1wH/AYEBggGnAf8BJgErAY4B/wE2
+        AT0BvAH/AToBQwHGAf8BOwFEAcYB/wE7AUQBxgH/AUsBUwHEAf8D2AH/A9gB/wPYAf8BNAE5AcEB/wE1
+        ATYBvwH/zAABnAGeAdEB/wPaAf8D2gH/AaIBpAG7Af8BMwE9AagB/wE/AUwBygH/AUABTAHLAf8BQQFM
+        AcsB/wPaAf8D2gH/AtUB1wH/ATgBPwHEAf8BNwE7AcIB/8wAAUEBSwHcAf8BRAFQAd8B/wFXAWMB4wH/
+        AvAB8wH/A+YB/wE5AUMBlAH/AUgBVwHMAf8BSAFXAc8B/wPcAf8D3AH/A9wB/wE8AUUBxwH/ATkBQAHG
+        Af/MAAFEAU8B3wH/AUgBVQHiAf8BTgFeAeUB/wFVAWYB6AH/AZoBpgHwAf8D+AH/AWMBbQGsAf8BUQFj
+        AdEB/wPfAf8D3wH/A98B/wE+AUkByQH/ATsBQwHJAf/MAAFGAVIB4AH/AUwBWwHkAf8BVAFlAegB/wFc
+        AXAB6wH/AWMBgAHuAf8BawGJAfEB/wP6Af8BjQGVAb4B/wP6Af8D5gH/A+EB/wFAAU0BywH/ATsBRgHM
+        Af/MAAFfAWoB2AH+AWABbQHoAf8BZwF4AesB/wFvAYgB7gH/AXcBkwHyAf8BhQGdAfUB/wGIAaEB9wH/
+        AfIB9AH8Af8C9wH6Af8D/QH/A/wB/wFVAWAB0gH/AlMBVgGs/wD/AMYAAUIBTQE+BwABPgMAASgDAAFA
+        AwABEAMAAQEBAAEBBQABgBcAA/8BAAGAAQEGAAGAAQEGAAHAAQEGAAHAAQEGAAHAAQEGAAHAAQEGAAHA
+        AQEGAAHAAQEGAAHAAQEGAAHAAQEGAAHAAQEGAAHAAQEGAAHAAQEGAAHAAQEGAAL/BgAC/wYACw==
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -237,6 +237,15 @@
   </data>
   <metadata name="cmsHelp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>127, 17</value>
+  </metadata>
+  <metadata name="ofdAdd.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>343, 17</value>
+  </metadata>
+  <metadata name="bwCombine.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>435, 17</value>
+  </metadata>
+  <metadata name="sfdOutput.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>552, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>53</value>
